--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,11 +2,8 @@ version: v1
 managed:
   enabled: true
   go_package_prefix:
-    default: github.com/rajatgoel/gh-go/gen
+    default: github.com/rajatgoel/linkdb/gen
 plugins:
   - plugin: buf.build/protocolbuffers/go
-    out: gen
-    opt: paths=source_relative
-  - plugin: buf.build/grpc/go
     out: gen
     opt: paths=source_relative
